src/objects/DeviceType__c.object
<CustomObject>
    <fields>
        <fullName>DeviceSize__c</fullName>
        <description>meter sizes will vary with clients so will need updating at implementation.</description>
        <label>Device Size</label>
        <picklist>
            <picklistValues>
                <fullName>10mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>65mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>125mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>150mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>225mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>250mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>300mm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>450mm</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <picklist>
            <picklistValues>
                <fullName>Kent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siemens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aqua</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Multiplier__c</fullName>
        <label>Multiplier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnitOfMeasure__c</fullName>
        <description>Defines whether a device is Metric or Imperial.</description>
        <label>Unit Of Measure</label>
        <picklist>
            <picklistValues>
                <fullName>Metric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Imperial - UK Gallons</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Device Type</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Device Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Device Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>